[gd_scene load_steps=76 format=3 uid="uid://bl0kwce2fdxm3"]

[ext_resource type="Script" path="res://MainGame/main_game_bedroom.gd" id="1_cps6x"]
[ext_resource type="Script" path="res://MainGame/Player.gd" id="1_un6wh"]
[ext_resource type="Texture2D" uid="uid://6u7oo0g0h3d" path="res://textures/blackImage.png" id="2_mvc6y"]
[ext_resource type="Texture2D" uid="uid://dtdy8f4egdxic" path="res://textures/roomBackground.png" id="3_ur5rw"]
[ext_resource type="Texture2D" uid="uid://cxmtm4rcadipt" path="res://textures/Modern tiles_Free/Characters_free/Alex_idle_anim_16x16.png" id="5_nvso8"]
[ext_resource type="Texture2D" uid="uid://bu8ykp7c7whl" path="res://textures/Modern tiles_Free/Characters_free/Alex_run_16x16.png" id="6_vtj4p"]
[ext_resource type="Texture2D" uid="uid://c5psyxg5st7ts" path="res://textures/RoomPCv2.png" id="7_y70ao"]
[ext_resource type="Texture2D" uid="uid://dav7e8adjtxyp" path="res://textures/RoomBedv2.png" id="8_dswr4"]
[ext_resource type="Texture2D" uid="uid://d1t3m5q6k3anr" path="res://textures/RoomTVv2.png" id="9_3q7tv"]
[ext_resource type="Texture2D" uid="uid://m5rhcvuvn6b0" path="res://textures/RoomChairv2.png" id="10_j0dwl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a1p05"]
size = Vector2(117.895, 118.91)

[sub_resource type="AtlasTexture" id="AtlasTexture_vn7ss"]
atlas = ExtResource("5_nvso8")
region = Rect2(288, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivw4h"]
atlas = ExtResource("5_nvso8")
region = Rect2(304, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jn1t"]
atlas = ExtResource("5_nvso8")
region = Rect2(320, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_gj0c0"]
atlas = ExtResource("5_nvso8")
region = Rect2(336, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uywi"]
atlas = ExtResource("5_nvso8")
region = Rect2(352, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlxej"]
atlas = ExtResource("5_nvso8")
region = Rect2(368, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xvxf"]
atlas = ExtResource("5_nvso8")
region = Rect2(192, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_bk0dr"]
atlas = ExtResource("5_nvso8")
region = Rect2(208, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixdu1"]
atlas = ExtResource("5_nvso8")
region = Rect2(224, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofdr0"]
atlas = ExtResource("5_nvso8")
region = Rect2(240, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_43hsy"]
atlas = ExtResource("5_nvso8")
region = Rect2(256, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_lobpw"]
atlas = ExtResource("5_nvso8")
region = Rect2(272, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_yi00o"]
atlas = ExtResource("5_nvso8")
region = Rect2(0, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_raj34"]
atlas = ExtResource("5_nvso8")
region = Rect2(16, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_eihgm"]
atlas = ExtResource("5_nvso8")
region = Rect2(32, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_c70np"]
atlas = ExtResource("5_nvso8")
region = Rect2(48, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6u4k"]
atlas = ExtResource("5_nvso8")
region = Rect2(64, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_msv5m"]
atlas = ExtResource("5_nvso8")
region = Rect2(80, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3cxu"]
atlas = ExtResource("5_nvso8")
region = Rect2(96, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_y72w4"]
atlas = ExtResource("5_nvso8")
region = Rect2(112, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_twwc3"]
atlas = ExtResource("5_nvso8")
region = Rect2(128, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_2emyh"]
atlas = ExtResource("5_nvso8")
region = Rect2(144, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhwjm"]
atlas = ExtResource("5_nvso8")
region = Rect2(160, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_galdx"]
atlas = ExtResource("5_nvso8")
region = Rect2(176, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8e5m"]
atlas = ExtResource("6_vtj4p")
region = Rect2(288, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_6yf2m"]
atlas = ExtResource("6_vtj4p")
region = Rect2(304, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_bww51"]
atlas = ExtResource("6_vtj4p")
region = Rect2(320, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qs06"]
atlas = ExtResource("6_vtj4p")
region = Rect2(336, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_otgcj"]
atlas = ExtResource("6_vtj4p")
region = Rect2(352, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_7h07m"]
atlas = ExtResource("6_vtj4p")
region = Rect2(368, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_aoert"]
atlas = ExtResource("6_vtj4p")
region = Rect2(192, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0fcr"]
atlas = ExtResource("6_vtj4p")
region = Rect2(208, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttlv3"]
atlas = ExtResource("6_vtj4p")
region = Rect2(224, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_b48g2"]
atlas = ExtResource("6_vtj4p")
region = Rect2(240, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6ehn"]
atlas = ExtResource("6_vtj4p")
region = Rect2(256, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_5a4s1"]
atlas = ExtResource("6_vtj4p")
region = Rect2(272, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrr0r"]
atlas = ExtResource("6_vtj4p")
region = Rect2(0, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_44qn2"]
atlas = ExtResource("6_vtj4p")
region = Rect2(16, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_3y7ua"]
atlas = ExtResource("6_vtj4p")
region = Rect2(32, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_kludg"]
atlas = ExtResource("6_vtj4p")
region = Rect2(48, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2tf1"]
atlas = ExtResource("6_vtj4p")
region = Rect2(64, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_yr7jp"]
atlas = ExtResource("6_vtj4p")
region = Rect2(80, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_11etn"]
atlas = ExtResource("6_vtj4p")
region = Rect2(96, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_8deij"]
atlas = ExtResource("6_vtj4p")
region = Rect2(112, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_1igrh"]
atlas = ExtResource("6_vtj4p")
region = Rect2(128, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7oua"]
atlas = ExtResource("6_vtj4p")
region = Rect2(144, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_pp1jv"]
atlas = ExtResource("6_vtj4p")
region = Rect2(160, 9, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_jshiq"]
atlas = ExtResource("6_vtj4p")
region = Rect2(176, 9, 16, 23)

[sub_resource type="SpriteFrames" id="SpriteFrames_0j3lu"]
animations = [{
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_vn7ss")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_ivw4h")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_0jn1t")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_gj0c0")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_5uywi")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_vlxej")
}],
"loop": true,
"name": &"idle_down",
"speed": 30.0
}, {
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_1xvxf")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_bk0dr")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_ixdu1")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_ofdr0")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_43hsy")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_lobpw")
}],
"loop": true,
"name": &"idle_left",
"speed": 30.0
}, {
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_yi00o")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_raj34")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_eihgm")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_c70np")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_j6u4k")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_msv5m")
}],
"loop": true,
"name": &"idle_right",
"speed": 30.0
}, {
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_l3cxu")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_y72w4")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_twwc3")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_2emyh")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_qhwjm")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_galdx")
}],
"loop": true,
"name": &"idle_up",
"speed": 30.0
}, {
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_e8e5m")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_6yf2m")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_bww51")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_5qs06")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_otgcj")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_7h07m")
}],
"loop": true,
"name": &"walk_down",
"speed": 30.0
}, {
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_aoert")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_n0fcr")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_ttlv3")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_b48g2")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_p6ehn")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_5a4s1")
}],
"loop": true,
"name": &"walk_left",
"speed": 30.0
}, {
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_hrr0r")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_44qn2")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_3y7ua")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_kludg")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_i2tf1")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_yr7jp")
}],
"loop": true,
"name": &"walk_right",
"speed": 30.0
}, {
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_11etn")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_8deij")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_1igrh")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_i7oua")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_pp1jv")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_jshiq")
}],
"loop": true,
"name": &"walk_up",
"speed": 30.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o8xtv"]
size = Vector2(146.875, 283)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_72d7h"]
size = Vector2(164.125, 285)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6k7oi"]
size = Vector2(238.255, 255)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_67fpx"]
size = Vector2(173, 321)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8310b"]
size = Vector2(464, 168)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hdfuv"]
size = Vector2(222, 80.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u437p"]
size = Vector2(206.125, 94)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hk1wj"]
size = Vector2(145.125, 51)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4goep"]
size = Vector2(93.0313, 101.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2l5ga"]
size = Vector2(1234.5, 215)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2faee"]
size = Vector2(132, 742)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h5ctb"]
size = Vector2(228.5, 752)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_354ju"]
size = Vector2(846.5, 88)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kaaly"]
size = Vector2(515.25, 116)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fyy5i"]
size = Vector2(244, 90)

[node name="main_game_bedroom" type="Node2D"]
modulate = Color(1, 0.917647, 0.662745, 1)
y_sort_enabled = true
script = ExtResource("1_cps6x")

[node name="Black" type="TextureRect" parent="."]
z_index = -1
offset_left = -38.0
offset_top = -14.0
offset_right = 1930.0
offset_bottom = 1094.0
texture = ExtResource("2_mvc6y")

[node name="RoomImage" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 271.0
offset_top = -58.0
offset_right = 1711.0
offset_bottom = 1022.0
texture = ExtResource("3_ur5rw")

[node name="Player" type="CharacterBody2D" parent="."]
z_index = 1
y_sort_enabled = true
position = Vector2(28, -48)
script = ExtResource("1_un6wh")

[node name="PlayerCollision" type="CollisionShape2D" parent="Player"]
position = Vector2(957, 966.218)
scale = Vector2(0.95, 0.4)
shape = SubResource("RectangleShape2D_a1p05")

[node name="AnimatedPlayerSprite" type="AnimatedSprite2D" parent="Player"]
texture_filter = 1
position = Vector2(958, 911)
scale = Vector2(6.875, 6.82609)
sprite_frames = SubResource("SpriteFrames_0j3lu")
animation = &"idle_down"

[node name="Computer" type="Node2D" parent="."]
z_index = 1
y_sort_enabled = true
position = Vector2(28, -48)

[node name="ComputerImage" type="TextureRect" parent="Computer"]
texture_filter = 1
offset_left = 353.0
offset_top = 552.0
offset_right = 542.0
offset_bottom = 933.0
texture = ExtResource("7_y70ao")

[node name="Area2D" type="Area2D" parent="Computer"]
position = Vector2(126, 27)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Computer/Area2D"]
position = Vector2(481.563, 746.5)
shape = SubResource("RectangleShape2D_o8xtv")

[node name="StaticBody2D" type="StaticBody2D" parent="Computer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Computer/StaticBody2D"]
position = Vector2(446.938, 767.5)
shape = SubResource("RectangleShape2D_72d7h")

[node name="Bed" type="Node2D" parent="."]
z_index = 1
y_sort_enabled = true
position = Vector2(28, -48)

[node name="BedImage" type="TextureRect" parent="Bed"]
y_sort_enabled = true
texture_filter = 1
offset_left = 1307.0
offset_top = 667.0
offset_right = 1567.0
offset_bottom = 975.0
texture = ExtResource("8_dswr4")

[node name="StaticBody2D" type="StaticBody2D" parent="Bed"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bed/StaticBody2D"]
position = Vector2(1430.13, 843.5)
shape = SubResource("RectangleShape2D_6k7oi")

[node name="Area2D" type="Area2D" parent="Bed/StaticBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bed/StaticBody2D/Area2D"]
position = Vector2(1284, 821.5)
shape = SubResource("RectangleShape2D_67fpx")

[node name="TV" type="Node2D" parent="."]
z_index = 1
y_sort_enabled = true
position = Vector2(28, -48)

[node name="TVImage" type="TextureRect" parent="TV"]
texture_filter = 1
offset_left = 1104.0
offset_top = 218.0
offset_right = 1302.0
offset_bottom = 370.0
texture = ExtResource("9_3q7tv")

[node name="StaticBody2D" type="StaticBody2D" parent="TV"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TV/StaticBody2D"]
position = Vector2(1317, 398)
shape = SubResource("RectangleShape2D_8310b")

[node name="Area2D" type="Area2D" parent="TV"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TV/Area2D"]
position = Vector2(1183, 535.75)
shape = SubResource("RectangleShape2D_hdfuv")

[node name="Door" type="Node2D" parent="."]
z_index = 1

[node name="Area2D" type="Area2D" parent="Door"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door/Area2D"]
position = Vector2(988, 978)
shape = SubResource("RectangleShape2D_u437p")

[node name="Boxes" type="Node2D" parent="."]
z_index = 1

[node name="StaticBody2D" type="StaticBody2D" parent="Boxes"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boxes/StaticBody2D"]
position = Vector2(470.438, 389.5)
shape = SubResource("RectangleShape2D_hk1wj")

[node name="Chair" type="Node2D" parent="."]
z_index = 1
y_sort_enabled = true

[node name="ChairImage" type="TextureRect" parent="Chair"]
texture_filter = 1
offset_left = 585.0
offset_top = 651.0
offset_right = 699.0
offset_bottom = 838.0
texture = ExtResource("10_j0dwl")

[node name="StaticBody2D" type="StaticBody2D" parent="Chair"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chair/StaticBody2D"]
position = Vector2(637.484, 759.75)
shape = SubResource("RectangleShape2D_4goep")

[node name="Wall" type="Node2D" parent="."]
z_index = 1

[node name="StaticBody2D" type="StaticBody2D" parent="Wall"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall/StaticBody2D"]
position = Vector2(995, 254.5)
shape = SubResource("RectangleShape2D_2l5ga")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Wall/StaticBody2D"]
position = Vector2(299, 589)
shape = SubResource("RectangleShape2D_2faee")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Wall/StaticBody2D"]
position = Vector2(1735.25, 596)
shape = SubResource("RectangleShape2D_h5ctb")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Wall/StaticBody2D"]
position = Vector2(1525, 981)
shape = SubResource("RectangleShape2D_354ju")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Wall/StaticBody2D"]
position = Vector2(620.375, 997)
shape = SubResource("RectangleShape2D_kaaly")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Wall/StaticBody2D"]
position = Vector2(983, 1071)
shape = SubResource("RectangleShape2D_fyy5i")

[node name="GameTimer" type="Label" parent="."]
top_level = true
z_index = 2
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -65.0
offset_right = 65.0
offset_bottom = 69.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 64
text = "08:00"

[node name="TutorialPanel" type="Panel" parent="."]
z_index = 1
offset_left = -11.0
offset_top = -16.0
offset_right = 1961.0
offset_bottom = 1077.0

[node name="TutorialText" type="Label" parent="TutorialPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -351.0
offset_top = -264.5
offset_right = 351.0
offset_bottom = 264.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Welcome to Cash Champions
In this game there are 3 important furniture in your room

The bed is where you can sleep and go to the next day
A day goes onto 24:00

The TV shows the news at that time

And finally the computer, where you control your funds
Invest your money to earn even more!

Maybe LåneHajen Haj will return....


"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Click" type="Label" parent="TutorialPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -298.0
offset_top = -55.0
offset_right = 298.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "*Left Click to Continue*"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SHARK IS HERE" type="Label" parent="."]
visible = false
offset_left = 906.0
offset_top = 817.0
offset_right = 1071.0
offset_bottom = 982.0
theme_override_font_sizes/font_size = 120
text = "❗"

[connection signal="body_entered" from="Computer/Area2D" to="Player" method="_on_computer_body_entered"]
[connection signal="body_exited" from="Computer/Area2D" to="Player" method="_on_computer_body_exited"]
[connection signal="body_entered" from="Bed/StaticBody2D/Area2D" to="Player" method="_on_bed_body_entered"]
[connection signal="body_exited" from="Bed/StaticBody2D/Area2D" to="Player" method="_on_bed_body_exited"]
[connection signal="body_entered" from="TV/Area2D" to="Player" method="_on_tv_body_entered"]
[connection signal="body_exited" from="TV/Area2D" to="Player" method="_on_tv_body_exited"]
[connection signal="body_entered" from="Door/Area2D" to="Player" method="_on_door_body_entered"]
[connection signal="body_exited" from="Door/Area2D" to="Player" method="_on_area_2d_body_exited"]
